--- a/_data/authors.yml
+++ b/_data/authors.yml
@@ -1,12 +1,12 @@
 # Authors
 
 Name Name:
-  name        : "Name Name"
+  name        : "CaioAS"
   uri         : "http://name.com"
   email       : "name@name.com"
-  bio         : "This is the first name."
-  avatar      : "bio-photo-2.jpg"
-  twitter     : "name"
+  bio         : "Filosofísico"
+  avatar      : "images/Super Nebulosa do Caranguejo.jpg"
+  twitter     : "damascoisotopo"
   google_plus : "Name"
 
 Name2 Name2:
