--- a/_config.yml
+++ b/_config.yml
@@ -244,6 +244,22 @@ defaults:
       layout: talk
       author_profile: true
       share: true
+  # _rpg
+  - scope:
+      path: ""
+      type: rpg
+    values:
+      layout: single
+      author_profile: true
+      share: true
+  # _divulgation
+  - scope:
+      path: ""
+      type: divulgatiom
+    values:
+      layout: single
+      author_profile: true
+      share: true    
 
 # Sass/SCSS
 sass:
